# Mathsolver

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cursor/rules/: project.mdc  workspace-integration.mdc
docs/: MathSolver_ProjectSpec_v3.md  roadmap (1).html
docs/handoff/: 2026-03-25.md
docs/legacy/: MathSolver_ProjectSpec_v2 (1).md  ftxui_mockup.html  phase1-plan.md
src/: CommandParser.hpp  Fraction.hpp  Imatrix.h  Matrix.hpp  SquareMatrix.hpp  StepPrinter.hpp  main.cpp  matrix.h
tests/: test_fraction.cpp  test_matrix.cpp
